# www

./: .env.example  .gitignore  package-lock.json
backend/: .dockerignore  FREE_EVENT_APIS.md  ai-search.js  api-event-fetcher.js  auto-populate.js  config.js  fetch-real-poa.js  fetcher-cli.js  fix-all-images.js  fix-artist-images.js  fix-missing-images.js  fix-viagogo-images.js  joomla_password.js  main_server.js  monitor_population.js  package-lock.json  package.json  population_log.txt  pyproject.toml  requirements.txt  reset-and-populate.js  reset-phobos-password.js  session-cookie.js  simple-sympla-search.js  test-apis.js  test-redis-internal.js  test-routes.js  test_discover.js  test_fix.js  test_shotgun.py  tmp_create_admin_session.js  tmp_porto_populate.js  unified-auth.js  wikipedia-ai-formularies.json  wikipedia-ai-training.json  wikipedia-fetcher.js
backend/_node_backup/: Dockerfile  EVENT_API_GUIDE.md  add-verified-events.js  ai-config.js  api-health-check.js  auto-populate.js  ecosystem.config.js  fetch-porto.js  fetch-ticketmaster.js  fetcher.js  fix-all-images.js  joomla_password.js  main_server.js  package-lock.json  package.json  populate-sample-events.js  populate_all_brazil_cities.js  populate_brazil_cities.py  test-image-fetcher.js  test-save-event.js  town-populator.js
backend/auth-proxy/: README.md
backend/beam/: mix.exs
backend/certs/: cert.pem  key.pem
backend/controllers/: admin.controller.js  auth.controller.js  events.controller.js  interests.controller.js
backend/lib/: postgres-jobs.js  wikipedia-image-fetcher.js  world-cities.js
(+526 files in other folders)
