[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keepup-fetcher"
version = "1.0.0"
description = "Background event & venue fetcher for KEEP-Up"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "aiohttp>=3.9",
    "pydantic>=2.5",
]

[project.scripts]
fetcher = "fetcher.main:app"
